www-src/app/styles/search.less
.notvisible {
	visibility: hidden;
}

.total-results {
	margin: 0;
	padding: 5px;
}

.searchpage {
	.dc-chart {
		.axis {
			display: none;
		}
	}

	.corrChart {
		.axis {
			display: none;
		}
	}

	svg {
		pointer-events: none;
	}
}

.form-search {
	margin-bottom: 20px;
}

.search-results {
	min-height: 375px;

	.list-group-item {
		border: 0;
		height: 350px;

		.media-heading {
			height: 3.5em;
		}
	}

	.chart-loader {
		height: 200px;

		.spinner {
			margin-top: 50px;
		}
	}

	.show-more {
		padding: 5px;
		margin: 15px 0 5px 0;

		button {
			outline: none;
		}
	}

}

.tweets {
	.twitter-blue {
		color: #55ACEE;

		&:hover {
			color: darken(#55ACEE, 15%);
		}
	}
	.highlight { background-color: rgba(243, 156, 18, 0.15); }

	.tweet-header {
		margin-bottom: 0;
		.tweet-avatar {
			height: 1em;
		}
		.tweet-author { font-weight: 600; }
	}

	.tweet-text {
		/*font-style: italic;*/
		margin-left: 17px;
	}
}

